[gd_scene load_steps=2 format=3 uid="uid://3a6xc0ignh37"]

[ext_resource type="Script" uid="uid://cn5bysx4nwfv6" path="res://scripts/PauseMenu.gd" id="1_q9v7t"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_q9v7t")

[node name="BackgroundBlur" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="PauseLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "‚è∏Ô∏è Juego Pausado"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="ResumeButton" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(280, 70)
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "‚ñ∂Ô∏è Continuar"

[node name="SettingsButton" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(280, 70)
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "‚öôÔ∏è Configuraci√≥n"

[node name="MainMenuButton" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(280, 70)
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "üè† Men√∫ Principal"
